...
                                    Ваш результат: \(correctAnswersCounter) из \(questionAmount)
                                    Количество сыгранных квизов: \(statisticService.gamesPlayed)
                                    Рекорд:\
                                    \(record.correct)/\(record.total) (\(record.date.dateTimeString))
                                    Cредняя точность: \(statisticService.totalAccuracy)%
                                    """,
                                    buttonText: "Сыграть еще раз!")
        return quizResult
    }
}

// MARK: - QuestionFactoryDelegate
extension MovieQuizPresenter: QuestionFactoryDelegate {
...
